translate the app

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,6 +1,37 @@
 {
   "app_title": "iCar",
-  "select_language": "Select Language",
+  "search_hint": "Search...",
+  "buyer_profile": "Buyer Profile",
+  "seller_profile": "Seller Profile",
+  "garage_profile": "Garage Profile",
+  "mechanic_profile": "Mechanic Profile",
+  "car_added_success": "Car added successfully!",
+  "car_updated_success": "Car updated successfully!",
+  "car_update_failed": "Failed to update car: {error}",
+  "car_add_failed": "Failed to add car: {error}",
+  "loading": "Loading...",
+  "error_occurred": "An error occurred",
+  "error_loading_profile": "Error loading profile",
+  "try_again_later": "Please try again later",
+  "no_cars_listed": "No cars listed yet",
+  "add_first_car": "Add Your First Car",
+  "failed_load_cars": "Failed to load cars",
+  "retry": "Retry",
+  "location_not_set": "Location not set",
+  "not_available": "N/A",
+  "add_second_card": "Add a second card",
+  "loading_profile": "Loading profile...",
+  "error_loading_data": "Error loading data",
+  "unknown_location": "Unknown location",
+  "filter": "Filter",
+  "no_cars_found": "No cars found",
+  "filters_applied": "Filters applied",
+  "try_adjusting_filters": "Try adjusting your filters or search again.",
+  "please_select_role": "Please select a role first",
+  "failed_to_update_role": "Failed to update role. Please try again.",
+  "spare_parts_coming_soon": "Spare parts\n(Coming Soon)",
+  "role_updated_successfully": "Role updated successfully",
+  "no_internet_connection": "No internet connection",
   "welcome": "Welcome",
   "welcome_title": "Welcome to iCar",
   "welcome_subtitle": "Your trusted partner for car services",
@@ -24,7 +55,6 @@
   "removed_from_wishlist": "Removed from wishlist",
   "for_sale": "For Sale",
   "for_rent": "For Rent",
-  "seller_profile": "Seller Profile",
   "call": "Call",
   "message": "Message",
   "cars": "Cars",
@@ -42,6 +72,19 @@
   "logout": "Logout",
   "delete_account": "Delete Account",
   "app_version": "iCar App v1.0.0",
+  "brand_toyota": "Toyota",
+  "brand_honda": "Honda",
+  "brand_nissan": "Nissan",
+  "brand_bmw": "BMW",
+  "brand_mercedes": "Mercedes",
+  "unit_km": "km",
+  "unit_kilometer_abbr": "km",
+  "unit_kilometers_abbr": "km",
+  "year_min": "2000",
+  "year_max": "2023",
+  "price_min": "\u00240",
+  "price_max": "\u0024200K",
+  "share": "Share",
   "name": "Name",
   "city": "City",
   "email": "Email",
@@ -99,12 +142,15 @@
   "make_offer": "Make Offer",
   "add_to_favorites": "Add to Favorites",
   "remove_from_favorites": "Remove from Favorites",
+  "add_to_favorite_sellers": "Add to my favorite sellers",
+  "remove_from_favorite_sellers": "Remove from my favorite sellers",
+  "turn_on_post_notifications": "Turn on new posts notifications",
+  "turn_off_post_notifications": "Turn off new posts notifications",
   "description": "Description",
   "specifications": "Specifications",
   "similar_vehicles": "Similar Vehicles",
   "no_results_found": "No results found",
   "try_changing_filters": "Try changing your filters or search criteria",
-  "loading": "Loading...",
   "filter_by": "Filter by",
   "reset": "Reset",
   "brand": "Brand",
