--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -1,27 +1,46 @@
 {
   "app_title": "iCar",
-  "select_language": "Sélectionner la langue",
+  "search_hint": "Rechercher...",
+  "buyer_profile": "Profil Acheteur",
+  "seller_profile": "Profil Vendeur",
+  "garage_profile": "Profil Garage",
+  "mechanic_profile": "Profil Mécanicien",
+  "car_added_success": "Voiture ajoutée avec succès !",
+  "car_updated_success": "Voiture mise à jour avec succès !",
+  "car_update_failed": "Échec de la mise à jour de la voiture : {error}",
+  "car_add_failed": "Échec de l'ajout de la voiture : {error}",
+  "loading": "Chargement...",
+  "error_occurred": "Une erreur s'est produite",
+  "error_loading_profile": "Erreur lors du chargement du profil",
+  "try_again_later": "Veuillez réessayer plus tard",
+  "no_cars_listed": "Aucune voiture répertoriée pour le moment",
+  "add_first_car": "Ajoutez votre première voiture",
+  "failed_load_cars": "Échec du chargement des voitures",
+  "retry": "Réessayer",
+  "location_not_set": "Emplacement non défini",
+  "not_available": "N/D",
+  "add_second_card": "Ajouter une deuxième carte",
+  "loading_profile": "Chargement du profil...",
+  "error_loading_data": "Erreur lors du chargement des données",
+  "unknown_location": "Emplacement inconnu",
+  "filter": "Filtrer",
+  "no_cars_found": "Aucune voiture trouvée",
+  "filters_applied": "Filtres appliqués",
+  "try_adjusting_filters": "Essayez d'ajuster vos filtres ou de rechercher à nouveau.",
+  "please_select_role": "Veuillez d'abord sélectionner un rôle",
+  "failed_to_update_role": "Échec de la mise à jour du rôle. Veuillez réessayer.",
+  "spare_parts_coming_soon": "Pièces détachées\n(Bientôt disponible)",
+  "role_updated_successfully": "Rôle mis à jour avec succès",
+  "no_internet_connection": "Pas de connexion Internet",
   "welcome": "Bienvenue",
-  "english": "Anglais",
-  "french": "Français",
-  "arabic": "Arabe",
-  "login": "Connexion",
-  "signing_in": "Connexion en cours...",
-  "google_sign_in_cancelled": "Connexion Google annulée",
-  "error_signing_in": "Erreur de connexion : {error}",
-  "successfully_signed_in": "Connecté avec succès !",
-  "signing_out": "Déconnexion en cours...",
-  "sign_up": "S'inscrire",
-  "skip_for_now": "Passer pour l'instant",
-  "back": "Retour",
-  "next": "Suivant",
-  "i_register_to": "Je m'inscris en tant que :",
-  "rent_sell_car": "Louer/Vendre une voiture",
-  "spare_parts_store": "Magasin de pièces détachées",
-  "list_tow_truck": "Proposer un service de dépannage",
+  "welcome_title": "Bienvenue sur iCar",
+  "welcome_subtitle": "Votre partenaire de confiance pour les services automobiles",
+  "get_started": "Commencer",
+  "select_role": "Sélectionnez votre rôle",
+  "buyer": "Acheteur",
+  "seller": "Vendeur",
+  "mechanic": "Mécanicien",
   "garage": "Garage",
-  "login_with_google": "Se connecter avec Google",
-  "spare_parts": "Pièces détachées",
   "tow_truck": "Dépanneuse",
   "profile": "Profil",
   "select_role_first": "Veuillez d'abord sélectionner un rôle",
@@ -30,13 +49,12 @@
   "year": "Année",
   "transmission": "Transmission",
   "fuel_type": "Type de carburant",
-  "seller_information": "Informations du vendeur",
+  "seller_information": "Informations sur le vendeur",
   "view_profile": "Voir le profil",
-  "added_to_wishlist": "Ajouté aux favoris",
-  "removed_from_wishlist": "Retiré des favoris",
+  "added_to_wishlist": "Ajouté à la liste de souhaits",
+  "removed_from_wishlist": "Supprimé de la liste de souhaits",
   "for_sale": "À vendre",
   "for_rent": "À louer",
-  "seller_profile": "Profil du vendeur",
   "call": "Appeler",
   "message": "Message",
   "cars": "Voitures",
@@ -44,7 +62,7 @@
   "rent": "Louer",
   "posted_days_ago": "Publié il y a {days} jours",
   "home": "Accueil",
-  "wishlist": "Favoris",
+  "wishlist": "Liste de souhaits",
   "add": "Ajouter",
   "favorite_sellers": "Vendeurs favoris",
   "personal_info": "Informations personnelles",
@@ -54,22 +72,38 @@
   "logout": "Déconnexion",
   "delete_account": "Supprimer le compte",
   "app_version": "iCar App v1.0.0",
+  "brand_toyota": "Toyota",
+  "brand_honda": "Honda",
+  "brand_nissan": "Nissan",
+  "brand_bmw": "BMW",
+  "brand_mercedes": "Mercedes",
+  "unit_km": "km",
+  "unit_kilometer_abbr": "km",
+  "unit_kilometers_abbr": "km",
+  "year_min": "2000",
+  "year_max": "2023",
+  "price_min": "0 $",
+  "price_max": "200 000 $",
+  "share": "Partager",
   "name": "Nom",
   "city": "Ville",
-  "email": "E-mail",
+  "email": "Email",
   "phone": "Téléphone",
+  "english": "Anglais",
+  "arabic": "Arabe",
+  "french": "Français",
   "cancel": "ANNULER",
   "confirm_logout": "Êtes-vous sûr de vouloir vous déconnecter ?",
   "confirm_delete_account": "Êtes-vous sûr de vouloir supprimer votre compte ? Cette action est irréversible.",
-  "about_us_description": "iCar est une plateforme de premier plan qui met en relation les propriétaires de voitures avec des prestataires de services de confiance. Notre mission est de rendre l'entretien automobile simple et fiable.",
+  "about_us_description": "iCar est une plateforme leader connectant les propriétaires de voitures avec des prestataires de services de confiance. Notre mission est de rendre l'entretien automobile simple et fiable.",
   "support_email": "support@icar.com",
   "support_phone": "+1 234 567 8900",
   "filters": "Filtres",
   "apply_filters": "Appliquer les filtres",
   "reset_filters": "Réinitialiser",
-  "price_range": "Tranche de prix",
-  "year_range": "Année",
-  "mileage_range": "Kilométrage",
+  "price_range": "Plage de prix",
+  "year_range": "Plage d'années",
+  "mileage_range": "Plage de kilométrage",
   "transmission_type": "Type de transmission",
   "automatic": "Automatique",
   "manual": "Manuelle",
@@ -84,36 +118,39 @@
   "used": "Occasion",
   "certified": "Certifié",
   "color": "Couleur",
-  "features": "Équipements",
+  "features": "Caractéristiques",
   "air_conditioning": "Climatisation",
-  "navigation": "GPS",
+  "navigation": "Navigation",
   "bluetooth": "Bluetooth",
   "backup_camera": "Caméra de recul",
   "sunroof": "Toit ouvrant",
   "leather_seats": "Sièges en cuir",
   "seller_type": "Type de vendeur",
-  "owner": "Particulier",
-  "dealer": "Professionnel",
-  "certified_dealer": "Professionnel agréé",
+  "owner": "Propriétaire",
+  "dealer": "Concessionnaire",
+  "certified_dealer": "Concessionnaire certifié",
   "sort_by": "Trier par",
-  "price_low_to_high": "Prix croissant",
-  "price_high_to_low": "Prix décroissant",
-  "newest_first": "Plus récent d'abord",
-  "oldest_first": "Plus ancien d'abord",
-  "mileage_low_to_high": "Kilométrage croissant",
-  "mileage_high_to_low": "Kilométrage décroissant",
+  "price_low_to_high": "Prix : du plus bas au plus élevé",
+  "price_high_to_low": "Prix : du plus élevé au plus bas",
+  "newest_first": "Les plus récents d'abord",
+  "oldest_first": "Les plus anciens d'abord",
+  "mileage_low_to_high": "Kilométrage : du plus bas au plus élevé",
+  "mileage_high_to_low": "Kilométrage : du plus élevé au plus bas",
   "contact_seller": "Contacter le vendeur",
   "send_message": "Envoyer un message",
   "call_now": "Appeler maintenant",
   "make_offer": "Faire une offre",
   "add_to_favorites": "Ajouter aux favoris",
   "remove_from_favorites": "Retirer des favoris",
+  "add_to_favorite_sellers": "Ajouter à mes vendeurs favoris",
+  "remove_from_favorite_sellers": "Retirer de mes vendeurs favoris",
+  "turn_on_post_notifications": "Activer les notifications de nouvelles annonces",
+  "turn_off_post_notifications": "Désactiver les notifications de nouvelles annonces",
   "description": "Description",
-  "specifications": "Caractéristiques",
+  "specifications": "Spécifications",
   "similar_vehicles": "Véhicules similaires",
   "no_results_found": "Aucun résultat trouvé",
-  "try_changing_filters": "Essayez de modifier vos filtres ou critères de recherche",
-  "loading": "Chargement...",
+  "try_changing_filters": "Essayez de modifier vos filtres ou vos critères de recherche",
   "filter_by": "Filtrer par",
   "reset": "Réinitialiser",
   "brand": "Marque",
@@ -126,22 +163,35 @@
   "sedan": "Berline",
   "suv": "SUV",
   "truck": "Camion",
-  "hatchback": "Hayon",
+  "hatchback": "Hatchback",
   "coupe": "Coupé",
   "convertible": "Cabriolet",
+  "login": "Connexion",
+  "sign_up": "S'inscrire",
+  "skip_for_now": "Passer pour l'instant",
+  "back": "Retour",
+  "next": "Suivant",
+  "i_register_to": "Je m'inscris pour :",
+  "rent_sell_car": "Louer/Vendre une voiture",
+  "spare_parts_store": "Magasin de pièces détachées",
+  "list_tow_truck": "Lister une dépanneuse",
+  "login_with_google": "Connexion avec Google",
+  "spare_parts": "Pièces détachées",
   "confirm_details": "Confirmez vos informations",
   "privacy_policy_agree": "J'accepte la politique de confidentialité",
   "privacy_policy": "Politique de confidentialité",
-  "privacy_policy_content": "Votre texte de politique de confidentialité va ici. En acceptant, vous acceptez nos conditions générales.",
+  "privacy_policy_content": "Le texte de votre politique de confidentialité va ici. En acceptant, vous acceptez nos termes et conditions.",
   "close": "Fermer",
   "finish": "Terminer",
-  "required_field": "Champ obligatoire",
-  "full_name": "Nom complet",
+  "required_field": "Champ requis",
+  "full_name": "Nom complet ou nom du showroom",
   "showroom_name": "Nom du showroom",
-  "mobile_number": "Numéro de portable",
+  "mobile_number": "Numéro de mobile",
   "store_name": "Nom du magasin",
-  "business_driver_name": "Nom de l'entreprise/du conducteur",
+  "save_changes": "Enregistrer les modifications",
+  "successfully_signed_in": "Connexion réussie !",
+  "signing_out": "Déconnexion...",
+  "business_driver_name": "Nom de l'entreprise / Conducteur",
   "business_name": "Nom de l'entreprise",
-  "mechanic_name": "Nom du mécanicien",
-  "save_changes": "Enregistrer les modifications"
-}
+  "mechanic_name": "Nom de l'entreprise / Mécanicien"
+  }
